--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "Offensive framework for deep HTTP/DNS exploitation: listeners, pay
 author: deepsecurity-pe
 
 # GitHub Pages settings
-url: https://dedal0.github.io
+url: https://deepsecurity-pe.github.io
 baseurl: /Introspector-Docs
 
 # Build settings
@@ -39,22 +39,22 @@ exclude:
 collections:
   concepts:
     output: true
-    permalink: /:name/
+    permalink: /:collection/:name/
   getting-started:
     output: true
-    permalink: /:name/
+    permalink: /:collection/:name/
   usage:
     output: true
-    permalink: /:name/
+    permalink: /:collection/:name/
   reference:
     output: true
-    permalink: /:name/
+    permalink: /:collection/:name/
   examples:
     output: true
-    permalink: /:name/
+    permalink: /:collection/:name/
   screenshots:
     output: true
-    permalink: /:name/
+    permalink: /:collection/:name/
 
 # Defaults
 defaults:
