--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "Offensive framework for deep HTTP/DNS exploitation: listeners, pay
 author: deepsecurity-pe
 
 # GitHub Pages settings
-url: https://deepsecurity-pe.github.io
+url: https://dedal0.github.io
 baseurl: /Introspector-Docs
 
 # Build settings
